# AutoML-Studio-Pro-

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES_ROADMAP.md  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cd.yml  ci.yml  tests.yml
.streamlit/: config.toml
artifacts/: app_schema.json  final_pipeline.joblib
automl_app/: __init__.py
automl_app/core/: config.py  helpers.py
automl_app/tabs/: analysis.py  developer.py  manual.py  prediction.py  train.py
automl_app/ui/: __init__.py  footer.py
automl_app/ui/tabs/: analysis.py  developer.py  manual.py  prediction.py  train.py
docs/: INSTALLATION.md
tests/: manual_test_checklist.md  test_helpers.py  test_phase1_features.py  test_train_utils.py
