[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-studio-pro"
version = "1.3.0"
description = "A no-code, end-to-end automated machine learning platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Himanshu", email = "himanshu231204@gmail.com"}
]
keywords = [
    "automl",
    "machine-learning",
    "no-code",
    "streamlit",
    "scikit-learn",
    "data-science",
    "classification",
    "regression",
    "deep-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "streamlit>=1.30.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "optuna>=3.5.0",
    "shap>=0.44.0",
    "statsmodels>=0.14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.0",
    "safety>=3.0.0",
    "coverage>=7.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0"
]

[project.urls]
Homepage = "https://github.com/himanshu231204/AutoML-Studio-Pro-"
Documentation = "https://github.com/himanshu231204/AutoML-Studio-Pro-/blob/main/README.md"
Repository = "https://github.com/himanshu231204/AutoML-Studio-Pro-"
Issues = "https://github.com/himanshu231204/AutoML-Studio-Pro-/issues"
Changelog = "https://github.com/himanshu231204/AutoML-Studio-Pro-/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["automl_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "unit: marks unit tests"
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF"     # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (needed for tests)
    "T201"    # print statements (used in CLI)
]

[tool.ruff.lint.isort]
known-first-party = ["automl_app"]

[tool.coverage.run]
source = ["automl_app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError"
]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
